# text2sql_agent_formacao

./: README.md  pyproject.toml
src/: main.py
src/ai/graph/: graph.py
src/ai/graph/nodes/: checker_agent.py  checker_agent_decider.py  db_consulter_agent.py  dba_agent.py  dba_decider.py  marcelo_agent.py  sql_agent.py  sql_agent_decider.py
src/ai/prompts/: checker_agent.txt  dba_agent.txt  marcelo_agent.txt  sql_agent.txt
src/ai/state/: state.py
src/ai/structured_outputs/: checker_agent_response.py  dba_agent_response.py  sql_agent_response.py
src/data/: Customers.csv  Order_Items.csv  Orders.csv  Products.csv
src/utils/: get_schema.py
